[gd_scene load_steps=21 format=3 uid="uid://bocdjbhql8qcn"]

[ext_resource type="Script" path="res://Scripts/BitcoinNetwork/MinerAI.gd" id="1_7o24j"]
[ext_resource type="Script" path="res://Scripts/QuadrantTerrain/QuadrantBuilder.gd" id="1_o08pr"]
[ext_resource type="Resource" uid="uid://cda54difj00ou" path="res://Resources/Weapons/Shotgun.tres" id="2_cavjt"]
[ext_resource type="PackedScene" uid="uid://domdfxprvi6aw" path="res://Scenes/Player/player.tscn" id="2_d3k6k"]
[ext_resource type="PackedScene" uid="uid://fk52mrn5gvsy" path="res://Scenes/QuadrantTerrain/PoolFracture.tscn" id="2_okdg1"]
[ext_resource type="Shader" path="res://Shaders/Block_background.gdshader" id="3_1ioqg"]
[ext_resource type="PackedScene" uid="uid://dqo2lrxl5di8o" path="res://Scenes/QuadrantTerrain/BlockCore.tscn" id="3_7k7v6"]
[ext_resource type="Theme" uid="uid://dylriqvd0gggf" path="res://game_main_theme.tres" id="3_fnuy8"]
[ext_resource type="Texture2D" uid="uid://db241hbwkh2f3" path="res://Textures/Download.png" id="4_2fn4v"]
[ext_resource type="PackedScene" uid="uid://ckhd13abglk4l" path="res://Scenes/QuadrantTerrain/CutShapeVisualizer.tscn" id="4_nhxjq"]
[ext_resource type="PackedScene" uid="uid://ceq2hhdrvgk6b" path="res://Scenes/QuadrantTerrain/FractureShard.tscn" id="5_w0fsn"]
[ext_resource type="PackedScene" uid="uid://crj8n15ft70nj" path="res://Scenes/QuadrantTerrain/FractureBodyDelaunay.tscn" id="6_iea0g"]
[ext_resource type="PackedScene" uid="uid://bjp6n48b77qnu" path="res://Scenes/UI/currency_ui.tscn" id="7_y3lbx"]
[ext_resource type="PackedScene" uid="uid://dfrt5rf2fu817" path="res://Scenes/UI/time_left_ui.tscn" id="9_rhv7f"]
[ext_resource type="PackedScene" uid="uid://c5hp70ml1r2a4" path="res://Scenes/UI/health_bar.tscn" id="10_k11cv"]
[ext_resource type="PackedScene" uid="uid://bjsnsabkmnmts" path="res://Scenes/UI/weapon_ui.tscn" id="12_e0bhm"]

[sub_resource type="Environment" id="Environment_5odol"]
background_mode = 3
glow_enabled = true
glow_intensity = 1.0
glow_strength = 1.2
glow_blend_mode = 0
glow_hdr_threshold = 0.69

[sub_resource type="FastNoiseLite" id="FastNoiseLite_shwem"]
noise_type = 3
seed = 440
frequency = 0.2119
fractal_octaves = 8

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_snq06"]
noise = SubResource("FastNoiseLite_shwem")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xpeib"]
shader = ExtResource("3_1ioqg")
shader_parameter/color = Color(0.721569, 0.47451, 0.203922, 1)
shader_parameter/iChannel1 = ExtResource("4_2fn4v")
shader_parameter/iChannel0 = SubResource("NoiseTexture2D_snq06")

[node name="World" type="Node2D"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_5odol")

[node name="Player" parent="." instance=ExtResource("2_d3k6k")]
unique_name_in_owner = true
position = Vector2(145, -12)
speed = 400.0
initial_weapon = ExtResource("2_cavjt")

[node name="RigidBodiesParent" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="QuadrantBuilder" type="Node2D" parent="." groups=["QuadrantBuilder"]]
script = ExtResource("1_o08pr")
quadrants_initial_health = 100.0
grid_size = Vector2i(8, 8)
fracture_body_color = Color(0.814176, 0.400977, 0.315342, 1)

[node name="SpawnPosition 1" type="Marker2D" parent="QuadrantBuilder"]
position = Vector2(1003, -123)

[node name="SpawnPosition 2" type="Marker2D" parent="QuadrantBuilder"]
position = Vector2(62, -174)

[node name="SpawnPosition 3" type="Marker2D" parent="QuadrantBuilder"]
position = Vector2(191, -444)

[node name="SpawnPosition 4" type="Marker2D" parent="QuadrantBuilder"]
position = Vector2(1237, -236)

[node name="BlockCore" parent="QuadrantBuilder" instance=ExtResource("3_7k7v6")]
unique_name_in_owner = true
position = Vector2(649, -456)

[node name="Pool_FractureBullets" parent="." instance=ExtResource("2_okdg1")]

[node name="Pool_FractureCutVisualizer" parent="." instance=ExtResource("2_okdg1")]
instance_template = ExtResource("4_nhxjq")
instantiate_new_on_empty = true
keep_instances_in_tree = true

[node name="Pool_FractureShards" parent="." instance=ExtResource("2_okdg1")]
instance_template = ExtResource("5_w0fsn")
instantiate_new_on_empty = true
keep_instances_in_tree = true

[node name="Pool_FractureBodies" parent="." instance=ExtResource("2_okdg1")]
instance_template = ExtResource("6_iea0g")
max_amount = 300
instantiate_new_on_empty = true

[node name="Quadrants" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(421, 0)

[node name="MinerAI" type="Node2D" parent="."]
script = ExtResource("1_7o24j")

[node name="AITimer" type="Timer" parent="MinerAI"]
unique_name_in_owner = true
wait_time = 20.0
one_shot = true

[node name="BGLayer" type="CanvasLayer" parent="."]
layer = -100

[node name="Panel" type="Panel" parent="BGLayer"]
material = SubResource("ShaderMaterial_xpeib")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_fnuy8")
theme_type_variation = &"Game Background"

[node name="GameUI" type="CanvasLayer" parent="."]

[node name="CurrencyUI" parent="GameUI" instance=ExtResource("7_y3lbx")]

[node name="TimeLeftUI" parent="GameUI" instance=ExtResource("9_rhv7f")]
unique_name_in_owner = true

[node name="HealthBar" parent="GameUI" instance=ExtResource("10_k11cv")]

[node name="WeaponUI" parent="GameUI" instance=ExtResource("12_e0bhm")]

[connection signal="map_builded" from="QuadrantBuilder" to="MinerAI" method="_on_quadrant_builder_map_builded"]
